Fix: Hover on Mobile

--- a/styles/styles.v2.css
+++ b/styles/styles.v2.css
@@ -36,7 +36,7 @@ body {
     user-select: none;
 }
 
-li:hover {
+.Welcome li:hover {
     background-color: #9A1B1C;
 }
 
